<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        android:src="@drawable/manu1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/introduction_to_docker_a_begining"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:layout_editor_absoluteX="0dp"
        android:textSize="24sp"
        android:padding="8dp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/tvAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/author_google"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/published_3h_ago"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <TextView
        android:id="@+id/tvContent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAuthor"
        tools:layout_editor_absoluteX="0dp"
        android:lineSpacingExtra="2dp"
        android:letterSpacing="0.1"
        android:padding="8dp"
        android:justificationMode="inter_word"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:text="@string/i_am_manoj_bs_studing_in_surana_college_in_year_mca_in_bengalore_univarcity_surana_college_is_a_nice_college_we_learn_a_lots"
        />

    <Button
        android:id="@+id/btnReadMore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/read_more"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>